# skylibrary

./: .env.example  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
config/: settings.py  urls.py
nginx/: nginx.conf
users/: serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
